--- a/assets/app.scss
+++ b/assets/app.scss
@@ -1,1 +1,9 @@
 @import '~bootstrap/scss/bootstrap';
+
+.main {
+    padding-top: 125px;
+}
+
+.header {
+    background-color: rgb(255, 255, 255);
+}
